--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -166,14 +166,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17172045">Teach Yourself Scheme in Fixnum Days (2015)</a>
+                                    <a href="https://news.ycombinator.com/item?id=17173283">APL deserves its renaissance too</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://ds26gte.github.io/tyscheme/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=tempodox">tempodox</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 12:25:27 &nbsp;•&nbsp;
-                                    24 comments &nbsp;•&nbsp;
+                                    <a class="node" href="http://wordsandbuttons.online/apl_deserves_its_renaissance_too.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=okaleniuk">okaleniuk</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 16:30:47 &nbsp;•&nbsp;
+                                    108 comments &nbsp;•&nbsp;
                                     177.0 points
                                 </span>
                             </td>
@@ -246,15 +246,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17178192">Middle name initials enhance evaluations of intellectual performance (2014)</a>
+                                    <a href="https://news.ycombinator.com/item?id=17177518">Pwned Passwords in Practice: Real World Examples of Blocking the Worst Passwords</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://onlinelibrary.wiley.com/doi/abs/10.1002/ejsp.2026">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=dmichulke">dmichulke</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 11:40:32 &nbsp;•&nbsp;
-                                    83 comments &nbsp;•&nbsp;
-                                    167.0 points
+                                    <a class="node" href="https://www.troyhunt.com/pwned-passwords-in-practice-real-world-examples-of-blocking-the-worst-passwords/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=robin_reala">robin_reala</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 09:00:46 &nbsp;•&nbsp;
+                                    75 comments &nbsp;•&nbsp;
+                                    168.0 points
                                 </span>
                             </td>
                         </tr>
@@ -266,14 +266,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17177518">Pwned Passwords in Practice: Real World Examples of Blocking the Worst Passwords</a>
+                                    <a href="https://news.ycombinator.com/item?id=17178192">Middle name initials enhance evaluations of intellectual performance (2014)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.troyhunt.com/pwned-passwords-in-practice-real-world-examples-of-blocking-the-worst-passwords/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=robin_reala">robin_reala</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 09:00:46 &nbsp;•&nbsp;
-                                    75 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://onlinelibrary.wiley.com/doi/abs/10.1002/ejsp.2026">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=dmichulke">dmichulke</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 11:40:32 &nbsp;•&nbsp;
+                                    85 comments &nbsp;•&nbsp;
                                     167.0 points
                                 </span>
                             </td>
@@ -453,8 +453,8 @@
                                     <a class="node" href="https://leanprover.github.io/theorem_proving_in_lean/introduction.html">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=benwr">benwr</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 07:39:27 &nbsp;•&nbsp;
-                                    25 comments &nbsp;•&nbsp;
-                                    148.0 points
+                                    26 comments &nbsp;•&nbsp;
+                                    149.0 points
                                 </span>
                             </td>
                         </tr>
@@ -493,8 +493,8 @@
                                     <a class="node" href="https://groups.google.com/forum/#!topic/redis-db/9FcwPtutyyQ">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=dsr12">dsr12</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 14:54:35 &nbsp;•&nbsp;
-                                    33 comments &nbsp;•&nbsp;
-                                    145.0 points
+                                    34 comments &nbsp;•&nbsp;
+                                    146.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 22:40:03.333608</strong>
+            <strong>Last update at 2018-05-29 22:50:04.326945</strong>
         </div>
     </div>
 </div>
