--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -233,7 +233,7 @@
                                     <a class="node" href="https://github.com/dotnet/cli/issues/3093#issuecomment-392663561">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=setquk">setquk</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 08:04:50 &nbsp;•&nbsp;
-                                    111 comments &nbsp;•&nbsp;
+                                    112 comments &nbsp;•&nbsp;
                                     135.0 points
                                 </span>
                             </td>
@@ -353,8 +353,8 @@
                                     <a class="node" href="https://www.marketwatch.com/story/venmo-stalkers-or-amateur-sleuths-they-out-cheating-boyfriends-spy-on-exes-and-see-who-buys-drugs-2018-05-11">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=maxshmax">maxshmax</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 17:20:30 &nbsp;•&nbsp;
-                                    154 comments &nbsp;•&nbsp;
-                                    124.0 points
+                                    158 comments &nbsp;•&nbsp;
+                                    125.0 points
                                 </span>
                             </td>
                         </tr>
@@ -473,7 +473,7 @@
                                     <a class="node" href="https://nomasters.io/posts/unquantified/">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=jstanley">jstanley</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 10:31:44 &nbsp;•&nbsp;
-                                    61 comments &nbsp;•&nbsp;
+                                    62 comments &nbsp;•&nbsp;
                                     115.0 points
                                 </span>
                             </td>
@@ -546,14 +546,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17173593">Anatomy of an online misinformation network</a>
+                                    <a href="https://news.ycombinator.com/item?id=17181879">Introducing Kepler.gl, an Open-Source Geospatial Toolbox</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0196087">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=azerwyn">azerwyn</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 17:24:27 &nbsp;•&nbsp;
-                                    97 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://ubere.ng/2H1HjFH">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=mvorwerck">mvorwerck</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 18:42:23 &nbsp;•&nbsp;
+                                    8 comments &nbsp;•&nbsp;
                                     109.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 22:50:04.326945</strong>
+            <strong>Last update at 2018-05-29 23:00:03.423416</strong>
         </div>
     </div>
 </div>
