--- a/top_stories/week/page1.html
+++ b/top_stories/week/page1.html
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17175186">Sucrase, 20x faster smaller-scoped alternative to Babel</a>
+                                    <a href="https://news.ycombinator.com/item?id=17181315">An Example Microservice Back End for Kubernetes, Bazel, Go, Java, GRPC</a>
                                 </span>
                             </td>
                         </tr>
@@ -266,14 +266,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17148432">Andy Rubin Puts Essential Up for Sale, Cancels Next Phone</a>
+                                    <a href="https://news.ycombinator.com/item?id=17178905">Possible BGP hijack of 1.1.1.1</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.bloomberg.com/news/articles/2018-05-24/andy-rubin-s-phone-maker-essential-is-said-to-consider-sale">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=coloneltcb">coloneltcb</a></strong> &nbsp;•&nbsp;
-                                    2018-05-24 21:08:52 &nbsp;•&nbsp;
-                                    363 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://bgpstream.com/event/138295">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=pstadler">pstadler</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 13:24:53 &nbsp;•&nbsp;
+                                    134 comments &nbsp;•&nbsp;
                                     386.0 points
                                 </span>
                             </td>
@@ -286,15 +286,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17178905">Possible BGP hijack of 1.1.1.1</a>
+                                    <a href="https://news.ycombinator.com/item?id=17148432">Andy Rubin Puts Essential Up for Sale, Cancels Next Phone</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://bgpstream.com/event/138295">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=pstadler">pstadler</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 13:24:53 &nbsp;•&nbsp;
-                                    134 comments &nbsp;•&nbsp;
-                                    385.0 points
+                                    <a class="node" href="https://www.bloomberg.com/news/articles/2018-05-24/andy-rubin-s-phone-maker-essential-is-said-to-consider-sale">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=coloneltcb">coloneltcb</a></strong> &nbsp;•&nbsp;
+                                    2018-05-24 21:08:52 &nbsp;•&nbsp;
+                                    363 comments &nbsp;•&nbsp;
+                                    386.0 points
                                 </span>
                             </td>
                         </tr>
@@ -334,7 +334,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=lilgreenland">lilgreenland</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 11:10:46 &nbsp;•&nbsp;
                                     50 comments &nbsp;•&nbsp;
-                                    368.0 points
+                                    371.0 points
                                 </span>
                             </td>
                         </tr>
@@ -446,15 +446,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17154355">Reality Driven Development: Fixing Project Management in Software</a>
+                                    <a href="https://news.ycombinator.com/item?id=17181046">UTC Is Enough for Everyone, Right?</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://www.brightball.com/articles/reality-driven-development-fixing-project-management-in-software">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=craigkerstiens">craigkerstiens</a></strong> &nbsp;•&nbsp;
-                                    2018-05-25 15:02:37 &nbsp;•&nbsp;
-                                    138 comments &nbsp;•&nbsp;
-                                    348.0 points
+                                    <a class="node" href="https://zachholman.com/talk/utc-is-enough-for-everyone-right">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=bpierre">bpierre</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 17:10:49 &nbsp;•&nbsp;
+                                    158 comments &nbsp;•&nbsp;
+                                    349.0 points
                                 </span>
                             </td>
                         </tr>
@@ -466,15 +466,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17181046">UTC Is Enough for Everyone, Right?</a>
+                                    <a href="https://news.ycombinator.com/item?id=17154355">Reality Driven Development: Fixing Project Management in Software</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://zachholman.com/talk/utc-is-enough-for-everyone-right">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=bpierre">bpierre</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 17:10:49 &nbsp;•&nbsp;
-                                    157 comments &nbsp;•&nbsp;
-                                    342.0 points
+                                    <a class="node" href="http://www.brightball.com/articles/reality-driven-development-fixing-project-management-in-software">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=craigkerstiens">craigkerstiens</a></strong> &nbsp;•&nbsp;
+                                    2018-05-25 15:02:37 &nbsp;•&nbsp;
+                                    138 comments &nbsp;•&nbsp;
+                                    348.0 points
                                 </span>
                             </td>
                         </tr>
@@ -513,7 +513,7 @@
                                     <a class="node" href="https://www.bloomberg.com/news/articles/2018-05-29/facebook-tools-are-used-to-screen-out-older-job-seekers-lawsuit-claims">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=uptown">uptown</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 12:40:55 &nbsp;•&nbsp;
-                                    315 comments &nbsp;•&nbsp;
+                                    316 comments &nbsp;•&nbsp;
                                     329.0 points
                                 </span>
                             </td>
@@ -553,8 +553,8 @@
                                     <a class="node" href="http://www.recommendmeabook.com/">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=gnomespaceship">gnomespaceship</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 14:20:55 &nbsp;•&nbsp;
-                                    89 comments &nbsp;•&nbsp;
-                                    319.0 points
+                                    92 comments &nbsp;•&nbsp;
+                                    322.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 23:30:03.440261</strong>
+            <strong>Last update at 2018-05-29 23:40:04.605686</strong>
         </div>
     </div>
 </div>
