--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -214,7 +214,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=axiomdata316">axiomdata316</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 23:06:24 &nbsp;•&nbsp;
                                     47 comments &nbsp;•&nbsp;
-                                    171.0 points
+                                    172.0 points
                                 </span>
                             </td>
                         </tr>
@@ -354,7 +354,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=Gimpei">Gimpei</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 20:38:01 &nbsp;•&nbsp;
                                     59 comments &nbsp;•&nbsp;
-                                    155.0 points
+                                    156.0 points
                                 </span>
                             </td>
                         </tr>
@@ -546,14 +546,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17174697">Two Canadian banks say accounts compromised: CIBC 40,000 and BMO 50,000</a>
+                                    <a href="https://news.ycombinator.com/item?id=17181130">People using Venmo to spy on cheating spouses</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://www.cbc.ca/news/business/simplii-data-hack-1.4680575">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=t1o5">t1o5</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 20:38:07 &nbsp;•&nbsp;
-                                    116 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://www.marketwatch.com/story/venmo-stalkers-or-amateur-sleuths-they-out-cheating-boyfriends-spy-on-exes-and-see-who-buys-drugs-2018-05-11">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=maxshmax">maxshmax</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 17:20:30 &nbsp;•&nbsp;
+                                    177 comments &nbsp;•&nbsp;
                                     137.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 00:20:04.337765</strong>
+            <strong>Last update at 2018-05-30 00:30:03.535030</strong>
         </div>
     </div>
 </div>
