--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17181130">People using Venmo to spy on cheating spouses</a>
+                                    <a href="https://news.ycombinator.com/item?id=17174697">Two Canadian banks say accounts compromised: CIBC 40,000 and BMO 50,000</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.marketwatch.com/story/venmo-stalkers-or-amateur-sleuths-they-out-cheating-boyfriends-spy-on-exes-and-see-who-buys-drugs-2018-05-11">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=maxshmax">maxshmax</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 17:20:30 &nbsp;•&nbsp;
-                                    176 comments &nbsp;•&nbsp;
-                                    136.0 points
+                                    <a class="node" href="http://www.cbc.ca/news/business/simplii-data-hack-1.4680575">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=t1o5">t1o5</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 20:38:07 &nbsp;•&nbsp;
+                                    117 comments &nbsp;•&nbsp;
+                                    137.0 points
                                 </span>
                             </td>
                         </tr>
@@ -253,8 +253,8 @@
                                     <a class="node" href="https://ubere.ng/2H1HjFH">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=mvorwerck">mvorwerck</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 18:42:23 &nbsp;•&nbsp;
-                                    9 comments &nbsp;•&nbsp;
-                                    128.0 points
+                                    10 comments &nbsp;•&nbsp;
+                                    129.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 00:20:04.337765</strong>
+            <strong>Last update at 2018-05-30 00:30:03.535030</strong>
         </div>
     </div>
 </div>
